<resources>
    <string name="app_name">Maesta</string>
    <!--Login-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forgot Password?</string>
    <!--Aboutus-->
    <string name="aboutus"> About Us</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>
    <string name="contact_adres">Contact Address</string>
    <string name="maesta_distributor">Maestro Distributer</string>
    <string name="distributor_adres">Aliquamorci Leo,lacuis in Elementium</string>
    <string name="adres_city">10435,Delhi,India</string>
    <string name="phone">Phone</string>
    <string name="phone_number">+9123456780</string>
    <string name="status">Status:</string>
    <string name="orderhistory">Order History</string>
    <string name="orderid">Order ID</string>
    <string name="total">Total</string>
    <string name="profile">Profile</string>
    <string name="mobile">Mobile No.</string>
    <string name="billing_deliver">Billing and Delivery Addresss</string>
    <string name="current_cat">Current Category Level</string>
    <string name="next_cat">Next Category Level</string>
    <string name="remening_target">Next Category Remaining Target</string>
    <string name="desc">Description</string>
    <string name="add_to_collection">ADD TO COLLECTION</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Home Screen-->
    <string name="search_hint">Search your product...</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="err_login_name">Please enter email.</string>
    <string name="err_login_pass">Please enter password.</string>
    <string name="password_length_error">Password should be atleast 6 digit long.</string>
    <string name="view_collection">View Collection</string>
    <string name="place_order">Place Order</string>
    <string name="welcome">Welcome !</string>
    <string name="my_profile">My Profile</string>
    <string name="my_order">My Orders</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="err_invalid_email">Invalid email address</string>


    <string-array name="film_genre">
        <item>Action</item>
        <item>Musical</item>
        <item>Drama</item>
        <item>Thriller</item>
        <item>Comedy</item>
    </string-array>

    <string-array name="actionFilms">

    </string-array>

    <string-array name="musicals">
        <item>Naughty Marietta (1935)</item>
        <item>Rose Marie (1936)</item>
        <item>Maytime (1937)</item>
        <item>Sweethearts (1938)</item>
        <item>Bitter Sweet (1940)</item>
        <item>New Moon (1940)</item>
        <item>I Married an Angel (1942)</item>
        <item>Lady Be Good (1941)</item>
        <item>Ship Ahoy (1942)</item>
        <item>Sensations of 1945 (1944)</item>
    </string-array>

    <string-array name="dramas">
        <item>Home of the Brave (1949)</item>
        <item>The Accused (1949)</item>
        <item>12 Angry Men (1957)</item>
        <item>Compulsion (1959)</item>
        <item>Inherit the Wind (1960)</item>
        <item>To Kill a Mockingbird (1962)</item>
        <item>Mrs. Miniver (1942)</item>
        <item>Since You Went Away (1944)</item>
        <item>The Champ (1931)</item>
        <item>Nashville (1975)</item>
    </string-array>

    <string-array name="thrillers">
        <item>Alien (1979)</item>
        <item>The French Connection (1971)</item>
        <item>High Noon (1952)</item>
        <item>Double Indemnity (1944)</item>
        <item>Safety Last (1923)</item>
        <item>The Lady From Shanghai (1948)</item>
        <item>The Third Man (1949)</item>
        <item>Rear Window (1954)</item>
        <item>The 39 Steps (1935)</item>
        <item>Shadow of a Doubt (1943)</item>
    </string-array>

    <string-array name="comedies">
        <item>Safety Last (1923)</item>
        <item>Duck Soup (1933)</item>
        <item>Cat Ballou (1965)</item>
        <item>What\'s Up, Tiger Lily? (1966)</item>
        <item>Blazing Saddles (1974)</item>
        <item>Play It Again, Sam (1972)</item>
        <item>The Cheap Detective (1978)</item>
        <item>The Naked Gun (1988)</item>
        <item>The Freshman (1990)</item>
        <item>Waiting for Guffman (1996) </item>
    </string-array>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="err_new_pass">Please enter new password.</string>
    <string name="err_confirm_pass">please enter confirm password</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you really want to logout ?</string>
    <string name="err_quantity">Invalid Quantity</string>
    <string name="err_name">Please enter your name.</string>
    <string name="err_number">Please enter your contact number.</string>
    <string name="err_message">Please enter message.</string>
    <string name="err_number_length">Contact number should be of 10 digits.</string>
    <string name="verification_code">Verification Code</string>
    <string name="hv_you_code">Have not received code ?</string>
    <string name="enter_verification_code">Please enter verification code sent to</string>
    <string name="secure_password">Secure your account  with a password</string>
    <string name="almost_done">You\'r e almost done</string>
    <string name="done">Done</string>
    <string name="err_code">Please enter proper code</string>
    <string name="password_match_error">Confirm password doesn\'t match.</string>
    <string name="inquiry">Inquiry</string>
    <string name="no_collection">No item added in your collection list.</string>
    <string name="add_new">Add New</string>
    <string name="try_again">Try Again</string>
    <string name="cnt_connect">Can\'t Connect</string>
    <string name="plz_check">Please check your network connection.</string>

</resources>
