<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

  <!--  <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/login"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>-->


    <LinearLayout
        android:id="@+id/first_name_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@android:drawable/dialog_holo_dark_frame"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rgr_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:drawableLeft="@android:drawable/btn_star_big_on"
                android:id="@+id/rgr_name"

                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/font_16" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rgr_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:drawableLeft="@android:drawable/btn_star_big_on"
                android:id="@+id/rgr_password"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/font_16" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:text="@string/forgetpassword"/>
        <android.support.v7.widget.CardView
            android:id="@+id/registerBtn_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_margin="20dp"
            android:clickable="false"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/margin_25"
            app:cardUseCompatPadding="false">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_20" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>