<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_almost_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/almost_done"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_22" />

        <TextView
            android:id="@+id/txt_secure_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/secure_password"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_22" />

        <RelativeLayout
            android:id="@+id/password_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_10">

                <EditText
                    android:id="@+id/et_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/new_pass"
                    android:inputType="textWebPassword"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_20" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/password_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/new_pass_input"
                android:layout_marginTop="10dp"
                android:padding="@dimen/margin_10"
                android:text="Show"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <EditText

                    android:id="@+id/et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:inputType="textWebPassword"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_20" />


            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_25"
            android:clickable="false"
            app:cardBackgroundColor="@color/redButtonColor"
            app:cardCornerRadius="@dimen/margin_1"
            app:cardUseCompatPadding="false">

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_30" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>