<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:cardElevation="@dimen/margin_15"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/margin_20">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <EditText
                    android:id="@+id/et_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_pass"
                    android:inputType="textWebPassword"
                    android:textSize="@dimen/font_22"
                    android:textColor="@color/textColorPrimary"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <EditText
                    android:id="@+id/et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:inputType="textWebPassword"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_22"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/verification_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <EditText
                    android:id="@+id/et_verification_code_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_code"
                    android:inputType="textWebPassword"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_22"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_pass_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_30"
                android:clickable="false"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/margin_25"
                app:cardUseCompatPadding="false">

                <Button
                    android:id="@+id/btn_mobile_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="CHANGE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_20" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>


